# jx11

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: Envelope.h  Filter.h  NoiseGenerator.h  Oscillator.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Preset.h  RotaryKnob.cpp  RotaryKnob.h  Synth.cpp  Synth.h  Utils.h  Voice.h
